force-app/main/default/objects/cdcpc__RD_Cleaning_Price__c/cdcpc__RD_Cleaning_Price__c.object-meta.xml
<CustomObject>
    <label>RD CleaningPrice</label>
    <nameField>
        <label>RDCleaningPrice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDCleaningPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>