force-app/main/default/objects/cdcpc__RD_Cleaning_Price__c/fields/cdcpc__Cleaning__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Cleaning__c</fullName>
    <label>Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>