force-app/main/default/objects/cdcpc__RD_Cleaning_Price__c/fields/cdcpc__SizeUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SizeUL__c</fullName>
    <label>SizeUL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>