force-app/main/default/objects/cdcpc__RD_Cleaning_Price__c/fields/cdcpc__SizeValueUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SizeValueUL__c</fullName>
    <label>SizeValueUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>