force-app/main/default/objects/cdcpc__RD_Cleaning_Price__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Cleaning__c</columns>
    <columns>cdcpc__Prod__c</columns>
    <columns>cdcpc__SizeLL__c</columns>
    <columns>cdcpc__SizeUL__c</columns>
    <columns>cdcpc__SizeValueLL__c</columns>
    <columns>cdcpc__SizeValueUL__c</columns>
    <columns>cdcpc__QtyLL__c</columns>
    <columns>cdcpc__QtyUL__c</columns>
    <columns>cdcpc__PriceEach__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>